core/unpackaged/main/default/objects/LogEntry__c/fields/LimitsQueueableJobs__c.field-meta.xml
<CustomField>
    <fullName>LimitsQueueableJobs__c</fullName>
    <complianceGroup>None</complianceGroup>
    <formula>IF(
        (LimitsQueueableJobsUsed__c / LimitsQueueableJobsMax__c * 100) &gt;= 90,
        "⛔",
        IF(
            (LimitsQueueableJobsUsed__c / LimitsQueueableJobsMax__c * 100) &lt; 90 &amp;&amp; (LimitsQueueableJobsUsed__c / LimitsQueueableJobsMax__c * 100) &gt;= 80,
            "⚠️",
            "✅"
        )
    )
    + ' ' + TEXT(ROUND(LimitsQueueableJobsUsed__c / LimitsQueueableJobsMax__c * 100, 2)) + '% ('
    + TEXT(LimitsQueueableJobsUsed__c) + ' / ' + TEXT(LimitsQueueableJobsMax__c) + ')'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>✅ when 80% or less of the limit is used, ⚠️ when 80.1-89.9% is used, or ⛔ when 90% or more is used</inlineHelpText>
    <label>Queueable Jobs</label>
    <type>Text</type>
</CustomField>