core/unpackaged/main/default/objects/LogEntry__c/fields/LimitsSoqlQueries__c.field-meta.xml
<CustomField>
    <fullName>LimitsSoqlQueries__c</fullName>
    <complianceGroup>None</complianceGroup>
    <formula>IF(
        (LimitsSoqlQueriesUsed__c / LimitsSoqlQueriesMax__c * 100) &gt;= 90,
        "⛔",
        IF(
            (LimitsSoqlQueriesUsed__c / LimitsSoqlQueriesMax__c * 100) &lt; 90 &amp;&amp; (LimitsSoqlQueriesUsed__c / LimitsSoqlQueriesMax__c * 100) &gt;= 80,
            "⚠️",
            "✅"
        )
    )
    + ' ' + TEXT(ROUND(LimitsSoqlQueriesUsed__c / LimitsSoqlQueriesMax__c * 100, 2)) + '% ('
    + TEXT(LimitsSoqlQueriesUsed__c) + ' / ' + TEXT(LimitsSoqlQueriesMax__c) + ')'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>✅ when 80% or less of the limit is used, ⚠️ when 80.1-89.9% is used, or ⛔ when 90% or more is used</inlineHelpText>
    <label>SOQL Queries</label>
    <type>Text</type>
</CustomField>