core/unpackaged/main/default/objects/LogEntry__c/fields/LimitsSoqlQueryLocatorRows__c.field-meta.xml
<CustomField>
    <fullName>LimitsSoqlQueryLocatorRows__c</fullName>
    <complianceGroup>None</complianceGroup>
    <formula>IF(
        (LimitsSoqlQueryLocatorRowsUsed__c / LimitsSoqlQueryLocatorRowsMax__c * 100) &gt;= 90,
        "⛔",
        IF(
            (LimitsSoqlQueryLocatorRowsUsed__c / LimitsSoqlQueryLocatorRowsMax__c * 100) &lt; 90 &amp;&amp; (LimitsSoqlQueryLocatorRowsUsed__c / LimitsSoqlQueryLocatorRowsMax__c * 100) &gt;= 80,
            "⚠️",
            "✅"
        )
    )
    + ' ' + TEXT(ROUND(LimitsSoqlQueryLocatorRowsUsed__c / LimitsSoqlQueryLocatorRowsMax__c * 100, 2)) + '% ('
    + TEXT(LimitsSoqlQueryLocatorRowsUsed__c) + ' / ' + TEXT(LimitsSoqlQueryLocatorRowsMax__c) + ')'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>✅ when 80% or less of the limit is used, ⚠️ when 80.1-89.9% is used, or ⛔ when 90% or more is used</inlineHelpText>
    <label>SOQL Query Locator Rows</label>
    <type>Text</type>
</CustomField>