core/unpackaged/main/default/objects/LogEntry__c/fields/LimitsSoqlQueryRows__c.field-meta.xml
<CustomField>
    <fullName>LimitsSoqlQueryRows__c</fullName>
    <complianceGroup>None</complianceGroup>
    <formula>IF(
        (LimitsSoqlQueryRowsUsed__c / LimitsSoqlQueryRowsMax__c * 100) &gt;= 90,
        "⛔",
        IF(
            (LimitsSoqlQueryRowsUsed__c / LimitsSoqlQueryRowsMax__c * 100) &lt; 90 &amp;&amp; (LimitsSoqlQueryRowsUsed__c / LimitsSoqlQueryRowsMax__c * 100) &gt;= 80,
            "⚠️",
            "✅"
        )
    )
    + ' ' + TEXT(ROUND(LimitsSoqlQueryRowsUsed__c / LimitsSoqlQueryRowsMax__c * 100, 2)) + '% ('
    + TEXT(LimitsSoqlQueryRowsUsed__c) + ' / ' + TEXT(LimitsSoqlQueryRowsMax__c) + ')'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>✅ when 80% or less of the limit is used, ⚠️ when 80.1-89.9% is used, or ⛔ when 90% or more is used</inlineHelpText>
    <label>SOQL Query Rows</label>
    <type>Text</type>
</CustomField>