core/unpackaged/main/default/objects/LogEntry__c/fields/LimitsSoslSearches__c.field-meta.xml
<CustomField>
    <fullName>LimitsSoslSearches__c</fullName>
    <complianceGroup>None</complianceGroup>
    <formula>IF(
        (LimitsSoslSearchesUsed__c / LimitsSoslSearchesMax__c * 100) &gt;= 90,
        "⛔",
        IF(
            (LimitsSoslSearchesUsed__c / LimitsSoslSearchesMax__c * 100) &lt; 90 &amp;&amp; (LimitsSoslSearchesUsed__c / LimitsSoslSearchesMax__c * 100) &gt;= 80,
            "⚠️",
            "✅"
        )
    )
    + ' ' + TEXT(ROUND(LimitsSoslSearchesUsed__c / LimitsSoslSearchesMax__c * 100, 2)) + '% ('
    + TEXT(LimitsSoslSearchesUsed__c) + ' / ' + TEXT(LimitsSoslSearchesMax__c) + ')'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>✅ when 80% or less of the limit is used, ⚠️ when 80.1-89.9% is used, or ⛔ when 90% or more is used</inlineHelpText>
    <label>SOSL Searches</label>
    <type>Text</type>
</CustomField>