core/unpackaged/main/default/objects/LogEntry__c/fields/LimitsSoslSearchesMax__c.field-meta.xml
<CustomField>
    <fullName>LimitsSoslSearchesMax__c</fullName>
    <complianceGroup>None</complianceGroup>
    <label>SOSL Searches Max</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>