core/unpackaged/main/default/objects/LogEntry__c/fields/Log__c.field-meta.xml
<CustomField>
    <fullName>Log__c</fullName>
    <complianceGroup>None</complianceGroup>
    <label>Log</label>
    <referenceTo>Log__c</referenceTo>
    <relationshipLabel>Log Entries</relationshipLabel>
    <relationshipName>LogEntries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>