core/unpackaged/main/default/objects/LogEntry__c/fields/LoggedByUsernameText__c.field-meta.xml
<CustomField>
    <fullName>LoggedByUsernameText__c</fullName>
    <complianceGroup>PII;GDPR;CCPA</complianceGroup>
    <formula>Log__r.LoggedByUsernameText__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Username</label>
    <type>Text</type>
</CustomField>