core/unpackaged/main/default/objects/LogEntry__c/fields/LoggingLevelWithImage__c.field-meta.xml
<CustomField>
    <fullName>LoggingLevelWithImage__c</fullName>
    <complianceGroup>PII;GDPR;CCPA</complianceGroup>
    <formula>CASE(
    TEXT(LoggingLevel__c),
    'ERROR', '⛔',
    'WARN', '⚠️',
    'INFO', 'ℹ️',
    'DEBUG', '🐞',
    'FINE', '👍',
    'FINER', '👌',
    'FINEST', '🌟',
    '⚙️'
)
+ ' ' + TEXT(LoggingLevel__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEPRECATED: Level</label>
    <type>Text</type>
</CustomField>