core/unpackaged/main/default/objects/LogEntry__c/fields/LogTransactionId__c.field-meta.xml
<CustomField>
    <fullName>LogTransactionId__c</fullName>
    <complianceGroup>None</complianceGroup>
    <formula>Log__r.TransactionId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Log Transaction ID</label>
    <type>Text</type>
</CustomField>