core/unpackaged/main/default/objects/LogEntry__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <complianceGroup>None</complianceGroup>
    <formula>IF(
  ISPICKVAL(OriginSourceMetadataType__c, ''),
  TEXT(OriginType__c),
  TEXT(OriginSourceMetadataType__c)
)
+
IF(
  OR (
    OriginLocation__c == null,
    OriginLocation__c == 'AnonymousBlock'
  ),
  '',
  '.' + OriginLocation__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin</label>
    <type>Text</type>
</CustomField>