core/unpackaged/main/default/objects/LogEntry__c/fields/OriginSourceCreatedByLink__c.field-meta.xml
<CustomField>
    <fullName>OriginSourceCreatedByLink__c</fullName>
    <complianceGroup>PII;GDPR;CCPA</complianceGroup>
    <formula>HYPERLINK(
    '/' + OriginSourceCreatedById__c,
    OriginSourceCreatedByUsername__c,
    '_top'
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin Source Created By</label>
    <type>Text</type>
</CustomField>