core/unpackaged/main/default/objects/LogEntry__c/fields/OriginSourceCreatedByUsername__c.field-meta.xml
<CustomField>
    <fullName>OriginSourceCreatedByUsername__c</fullName>
    <complianceGroup>PII;GDPR;CCPA</complianceGroup>
    <label>Origin Source Created By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>