core/unpackaged/main/default/objects/LogEntry__c/fields/OriginSourceId__c.field-meta.xml
<CustomField>
    <fullName>OriginSourceId__c</fullName>
    <complianceGroup>None</complianceGroup>
    <inlineHelpText>The ID of the source metadata that generated the log entry</inlineHelpText>
    <label>Origin Source ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>