core/unpackaged/main/default/objects/LogEntry__c/fields/OriginSourceLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>OriginSourceLastModifiedDate__c</fullName>
    <complianceGroup>PII;GDPR;CCPA</complianceGroup>
    <label>Origin Source Last Modified Date</label>
    <type>DateTime</type>
</CustomField>