core/unpackaged/main/default/objects/LogEntry__c/fields/OriginSourceSnippet__c.field-meta.xml
<CustomField>
    <fullName>OriginSourceSnippet__c</fullName>
    <complianceGroup>None</complianceGroup>
    <inlineHelpText>A JSON snippet of the Apex class or trigger code that generated the log entry</inlineHelpText>
    <label>Origin Source Snippet</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>