core/unpackaged/main/default/objects/LogEntry__c/fields/OriginType__c.field-meta.xml
<CustomField>
    <fullName>OriginType__c</fullName>
    <complianceGroup>None</complianceGroup>
    <label>Origin Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
                <color>#333333</color>
                <label>Apex</label>
            </value>
            <value>
                <fullName>Component</fullName>
                <color>#A845DC</color>
                <label>Component</label>
            </value>
            <value>
                <fullName>Flow</fullName>
                <color>#FFCC33</color>
                <label>Flow</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>