core/unpackaged/main/default/objects/LogEntry__c/fields/RecordDetailedLink__c.field-meta.xml
<CustomField>
    <fullName>RecordDetailedLink__c</fullName>
    <complianceGroup>None</complianceGroup>
    <formula>IF(
    NOT(ISBLANK(RecordId__c)),
    CASE(
        TEXT(RecordSObjectClassification__c),
        'Custom Object', HYPERLINK(
            '/' + RecordId__c,
            TEXT(RecordSObjectType__c) + ': ' + IF(
                ISBLANK(RecordName__c),
                RecordId__c,
                RecordName__c
            ),
            '_top'
        ),
        'Standard Object', HYPERLINK(
            '/' + RecordId__c,
            TEXT(RecordSObjectType__c) + ': ' + IF(
                ISBLANK(RecordName__c),
                RecordId__c,
                RecordName__c
            ),
            '_top'
        ),
        IF(
            ISBLANK(RecordId__c),
            null,
            IF(
                ISBLANK(RecordName__c) &amp;&amp; NOT(ISBLANK(RecordId__c)),
                TEXT(RecordSObjectType__c) + ': ' + RecordId__c,
                TEXT(RecordSObjectType__c) + ': ' + RecordName__c
            )
        )
    ),
    IF(
        ISBLANK(TEXT(RecordCollectionType__c)),
        '',
        IF(
            TEXT(RecordCollectionType__c) = 'Map',
            TEXT(RecordCollectionType__c) + '&lt;Id, ' + TEXT(RecordSObjectType__c) + '&gt;',
            TEXT(RecordCollectionType__c) + '&lt;' + TEXT(RecordSObjectType__c) + '&gt;'
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Record</label>
    <type>Text</type>
</CustomField>