core/unpackaged/main/default/objects/LogEntry__c/fields/RecordJsonMasked__c.field-meta.xml
<CustomField>
    <fullName>RecordJsonMasked__c</fullName>
    <complianceGroup>None</complianceGroup>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if sensitive data was removed from the record JSON, using log entry data mask rules</inlineHelpText>
    <label>Record JSON Masked</label>
    <type>Checkbox</type>
</CustomField>