core/unpackaged/main/default/objects/LogEntry__c/fields/RecordJsonTruncated__c.field-meta.xml
<CustomField>
    <fullName>RecordJsonTruncated__c</fullName>
    <complianceGroup>None</complianceGroup>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if the text in Record JSON was truncated due to being too long to fit into the field</inlineHelpText>
    <label>Record JSON Truncated</label>
    <type>Checkbox</type>
</CustomField>