core/unpackaged/main/default/objects/LogEntry__c/fields/RecordLink__c.field-meta.xml
<CustomField>
    <fullName>RecordLink__c</fullName>
    <complianceGroup>None</complianceGroup>
    <formula>IF(
    NOT(ISBLANK(RecordId__c)),
    CASE(
        TEXT(RecordSObjectClassification__c),
        'Custom Object', HYPERLINK(
            '/' + RecordId__c,
            IF(
                ISBLANK(RecordName__c),
                RecordId__c,
                RecordName__c
            ),
            '_top'
        ),
        'Standard Object', HYPERLINK(
            '/' + RecordId__c,
            IF(
                ISBLANK(RecordName__c),
                RecordId__c,
                RecordName__c
            ),
            '_top'
        ),
        IF(
            ISBLANK(RecordName__c),
            RecordId__c,
            RecordName__c
        )
    ),
    IF(
        ISBLANK(TEXT(RecordCollectionType__c)),
        '',
        IF(
            TEXT(RecordCollectionType__c) = 'Map',
            TEXT(RecordCollectionType__c) + '&lt;Id, ' + TEXT(RecordSObjectType__c) + '&gt;',
            TEXT(RecordCollectionType__c) + '&lt;' + TEXT(RecordSObjectType__c) + '&gt;'
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Record</label>
    <type>Text</type>
</CustomField>