core/unpackaged/main/default/objects/LogEntry__c/fields/RecordSObjectClassification__c.field-meta.xml
<CustomField>
    <fullName>RecordSObjectClassification__c</fullName>
    <complianceGroup>None</complianceGroup>
    <label>Related Record Object Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Change Event Object</fullName>
            </value>
            <value>
                <fullName>Chatter Feed Object</fullName>
            </value>
            <value>
                <fullName>Custom Metadata Type Object</fullName>
            </value>
            <value>
                <fullName>Custom Object</fullName>
            </value>
            <value>
                <fullName>Custom Setting Object</fullName>
            </value>
            <value>
                <fullName>Field History Tracking Object</fullName>
            </value>
            <value>
                <fullName>Platform Event Object</fullName>
            </value>
            <value>
                <fullName>Record Share Object</fullName>
            </value>
            <value>
                <fullName>Standard Object</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>