core/unpackaged/main/default/objects/LogEntry__c/fields/RecordSObjectTypeNamespace__c.field-meta.xml
<CustomField>
    <fullName>RecordSObjectTypeNamespace__c</fullName>
    <complianceGroup>None</complianceGroup>
    <externalId>true</externalId>
    <label>Related Record Object Namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>