core/unpackaged/main/default/objects/LogEntry__c/fields/RestRequestBodyTruncated__c.field-meta.xml
<CustomField>
    <fullName>RestRequestBodyTruncated__c</fullName>
    <complianceGroup>None</complianceGroup>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if the text in REST Request Body was truncated due to being too long to fit into the field</inlineHelpText>
    <label>REST Request Body Truncated</label>
    <type>Checkbox</type>
</CustomField>