core/unpackaged/main/default/objects/LogEntry__c/fields/RestRequestParameters__c.field-meta.xml
<CustomField>
    <fullName>RestRequestParameters__c</fullName>
    <complianceGroup>None</complianceGroup>
    <label>REST Request Parameters</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>