core/unpackaged/main/default/objects/LogEntry__c/fields/RestRequestUri__c.field-meta.xml
<CustomField>
    <fullName>RestRequestUri__c</fullName>
    <complianceGroup>None</complianceGroup>
    <label>REST Request URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>