core/unpackaged/main/default/objects/LogEntry__c/fields/RestResponseBodyTruncated__c.field-meta.xml
<CustomField>
    <fullName>RestResponseBodyTruncated__c</fullName>
    <complianceGroup>None</complianceGroup>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if the text in REST Response Body was truncated due to being too long to fit into the field</inlineHelpText>
    <label>REST Response Body Truncated</label>
    <type>Checkbox</type>
</CustomField>